2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Fixes for the cost function (reducing code size and exposing code generation issues).

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Preparations for removing accuse.

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Fix xa to hx assignment.

2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc:
	  Fix assignment of nRegs and regs for accuse symbols.

2012-04-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fixed div/mod sign ext. to work with register result

2012-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Made hc08 code generation more robust wrt. surviving registers and register operands.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Handling of pointer access in new allocator.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/z80/ralloc2.cc,
	  src/hc08/gen.h,
	  src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Improve hc08 cost function.

2012-04-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c: