@@ -1,3 +1,7 @@
+2012-04-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/gen.c: rewrite genCast for register source/results
+
 2012-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/ralloc2.cc,
